[package]
name = "mles-webproxy"
version = "0.8.8"
authors = ["jq-rs"]
edition = "2018"

[dependencies]
tokio = "0.1"
futures = "0.1"
acme-lib = "0.7"
warp = { path = "../warp", features=["tls"] }
tokio-io = "0.1"
mles-utils = "1.1.0"
bytes = "0.4"
x509-parser = "0.7"
blake2 = "0.9"
aes = { version = "0.7", features = ["ctr"] }
block-modes = "0.8"
base64 = "0.12"
