[package]
name = "mles-webproxy"
version = "0.9.0"
authors = ["jq-rs"]
edition = "2021"

[dependencies]
tokio = { version="1.36", features = ["full"] }
tokio-stream = { version="0.1.14", features = ["net"] }
tokio-util = { version="0.7.10", features = ["compat"] }
tokio-rustls = "0.25"
rustls-acme = { version="0.9.2", default-features = false, features = ["tokio", "ring"] }
warp = { version = "0.3.6" }
simple_logger = "4.3.3"
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
async-compression = { version = "0.4.6", features = ["tokio", "brotli", "zstd"] }
serde_json = "1.0"
siphasher = "1.0.0"
http-types = "2"

[profile.release]
lto = true
